# androidProceduralAnimationIK

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mslabs/pineda/vulkanandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  engine.h  native-lib.cpp
app/src/main/cpp/include/animation/: animation.hpp  animation_manager.hpp  skeleton.hpp
app/src/main/cpp/include/app/: first_app.hpp  frame_info.hpp  input_handler.hpp  utility.hpp
app/src/main/cpp/include/engine/: animation_sequencer.hpp  cone_mesh.hpp  cube_map.hpp  debug.hpp  dog_classifier.hpp  joint_editor.hpp  model_manager.hpp  shadow_manager.hpp  ve_camera.hpp  ve_device.hpp  ve_game_object.hpp  ve_imgui.hpp  ve_model.hpp  ve_normal_map.hpp  ve_pipeline.hpp  ve_renderer.hpp  ve_swap_chain.hpp  ve_texture.hpp  ve_window.hpp
app/src/main/cpp/include/renderers/: cube_map_system.hpp  outline_highlight_system.hpp  pbr_render_system.hpp  point_light_system.hpp  shadow_render_system.hpp  skeleton_system.hpp
app/src/main/cpp/src/animation/: animation.cpp  animation_manager.cpp  skeleton.cpp
app/src/main/cpp/src/app/: first_app.cpp  input_handler.cpp  tiny_gltf.cpp
app/src/main/cpp/src/engine/: animation_sequencer.cpp  cone_mesh.cpp  cube_map.cpp  dog_classifier.cpp  joint_editor.cpp  model_manager.cpp  shadow_manager.cpp  ve_camera.cpp  ve_device.cpp  ve_game_object.cpp  ve_imgui.cpp  ve_model.cpp  ve_normal_map.cpp  ve_pipeline.cpp  ve_renderer.cpp  ve_swap_chain.cpp  ve_texture.cpp  ve_window.cpp
app/src/main/cpp/src/renderers/: cube_map_system.cpp  outline_highlight_system.cpp  pbr_render_system.cpp  point_light_system.cpp  shadow_render_system.cpp  skeleton_system.cpp
app/src/main/java/com/mslabs/pineda/vulkanandroid/: MainActivity.kt
app/src/main/java/com/mslabs/pineda/vulkanandroid/ml/: DogClassifier.kt  ModelMapper.kt
app/src/main/java/com/mslabs/pineda/vulkanandroid/models/: AnimalLabels.kt  DogLabels.kt  Recognition.kt
app/src/main/java/com/mslabs/pineda/vulkanandroid/utils/: CameraManager.kt  Constants.kt  ImageUtils.kt  NativeInterface.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: anito_ic_launcher_round.xml
app/src/main/res/values/: anito_ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: bones_shader.frag  bones_shader.vert  cube_map.frag  cube_map.vert  joints_shader.frag  joints_shader.vert  outline_highlight_shader.frag  outline_highlight_shader.vert  pbr_shader.frag  pbr_shader.vert  shader.frag  shader.vert  shadow_depth.frag  shadow_depth.vert
app/src/test/java/com/mslabs/pineda/vulkanandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
